force-app/main/default/objects/Health_and_Immunization__c.object
<CustomObject>
    <fields>
        <fullName>CaliTdapExemptionDate__c</fullName>
        <description>California Tdap Exemption Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cali_Tdap_Exemption_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaliTdapPersonalExemption__c</fullName>
        <description>Personal Belief Exemption Tdap (California Only)</description>
        <label>Cali_Tdap_PersonalExemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Dental_Extension_Will_Expire__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Dental Extension Will Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Height_Checked__c</fullName>
        <description>Date Height Checked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Height Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Weight_Checked__c</fullName>
        <description>Date Weight Checked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Weight Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Screening_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Screening_Status__c</fullName>
        <label>Dental Screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>ORCA-Burden</fullName>
                </value>
                <value>
                    <fullName>ORCA-Prior Submission</fullName>
                </value>
                <value>
                    <fullName>ORCA-Religious Exemption</fullName>
                </value>
                <value>
                    <fullName>Principal Extension Approved</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dentist_Name__c</fullName>
        <description>Dentist name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dentist Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dentist_Phone__c</fullName>
        <description>Dentist phone number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dentist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doctor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doctor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Medical_Authorization__c</fullName>
        <label>Emergency Medical Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified-Refused</fullName>
                </value>
                <value>
                    <fullName>Extension Approved by the Principal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GACA_CEED_Status__c</fullName>
        <description>Certificate of Ear Eye and Dental</description>
        <label>GACA CEED Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Insurance group number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Screening_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hearing Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearing_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hearing Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImmunChickenpox1__c</fullName>
        <description>Date of Chickenpox 1</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Chickenpox_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunChickenpox2__c</fullName>
        <description>Date of Chickenpox 2</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Chickenpox_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunChickenpox3__c</fullName>
        <description>Date of Chickenpox 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Chickenpox_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunDipTetPert1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_DipTetPert_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunDipTetPert2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_DipTetPert_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunDipTetPert3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_DipTetPert_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHIB1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HIB_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHIB2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HIB_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHIB3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HIB_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHIBExemption__c</fullName>
        <description>Exemption - HIB</description>
        <label>Immun_HIB_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunHPV1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HPV_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHPV2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HPV_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHPV3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HPV_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisA1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisA_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisA2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisA_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisA3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisA_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisB1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisB_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisB2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisB_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunHepatitisB3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_HepatitisB_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunInfluenzaMostRecent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Influenza_MostRecent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunInfluenza__c</fullName>
        <description>Number of Doses-Haemophilus Influenza Type b (HIB)</description>
        <label>Immun_Influenza</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunMMR1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_MMR_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunMMR2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_MMR_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunMMR3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_MMR_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunMening2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Mening_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunMeningitis__c</fullName>
        <description>Number of Doses-Meningitis</description>
        <label>Immun_Meningitis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunPCV1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_PCV_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunPCV2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_PCV_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunPCV3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_PCV_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunPCVExemption__c</fullName>
        <label>Immun_PCV_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunPolio1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Polio_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunPolio3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Polio_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunPolio4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Polio_4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunRotavirus1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Rotavirus_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunRotavirus2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Rotavirus_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunRotavirus3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Rotavirus_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunTBSkinTest1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_TBSkinTest_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunTDBooster1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_TDBooster_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunTDBooster2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_TDBooster_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunTDBoosterExemption__c</fullName>
        <label>Immun_TDBooster_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunTDBooster__c</fullName>
        <label>Immun_TDBooster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmunTdap1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Tdap_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImmunTdap2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Tdap_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immun_Chickenpox_2__c</fullName>
        <description>Date of Chickenpox 2</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Chickenpox_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immun_Chickenpox_Exemption__c</fullName>
        <description>Exemption - Chickenpox (Varicella)</description>
        <label>Immun_Chickenpox_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Chickenpox__c</fullName>
        <description>Number of Doses-Chickenpox (Varicella)</description>
        <label>Immun_Chickenpox</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Exposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_DipTetPert_Exemption__c</fullName>
        <description>Exemption - Diphtheria, Tetanus, and Pertussis (DTaP/DTP/TD/Td)</description>
        <label>Immun_DipTetPert_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_DipTetPert__c</fullName>
        <description>Number of Doses-Diphtheria, Tetanus, and Pertussis (DTaP/DTP/TD/Td)</description>
        <label>Immun_DipTetPert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_HepatitisA_Exemption__c</fullName>
        <description>Exemption - Hepatitis A (HepA)</description>
        <label>Immun_HepatitisA_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_HepatitisA__c</fullName>
        <description>Number of Doses-Hepatitis A (HepA)</description>
        <label>Immun_HepatitisA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_HepatitisB_Exemption__c</fullName>
        <description>Exemption - Hepatitis B (HepB)</description>
        <label>Immun_HepatitisB_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_HepatitisB__c</fullName>
        <description>Number of Doses-Hepatitis B (HepB)</description>
        <label>Immun_HepatitisB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_MMR_Exemption__c</fullName>
        <description>Exemption - Measles, Mumps, Rubella (MMR)</description>
        <label>Immun_MMR_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_MMR__c</fullName>
        <description>Number of Doses-Measles, Mumps, Rubella (MMR)</description>
        <label>Immun_MMR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Mening_1__c</fullName>
        <description>Date of Mening 1</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Mening_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immun_Mening_Exemption__c</fullName>
        <description>Exemption - Meningitis</description>
        <label>Immun_Mening_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Polio_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immun_Polio_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immun_Polio_Exemption__c</fullName>
        <description>Exemption - Polio (IPV/OPV)</description>
        <label>Immun_Polio_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Polio__c</fullName>
        <description>Number of Doses-Polio (IPV/OPV)</description>
        <label>Immun_Polio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Rotavirus__c</fullName>
        <label>Immun_Rotavirus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Tdap_Exemption__c</fullName>
        <description>Exemption - Tdap</description>
        <label>Immun_Tdap_Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immun_Tdap__c</fullName>
        <description>Number of Doses-Tdap</description>
        <label>Immun_Tdap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunization_Article_Tracking_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Article Tracking 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immunization_Article_Tracking_2__c</fullName>
        <description>Add Article Tracking Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Article Tracking 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immunization_Article_Tracking_3__c</fullName>
        <description>Add Article Tracking Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Article Tracking 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immunization_Booster_Extension_Expire__c</fullName>
        <description>Date the Immunization Booster Extension will expire</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Booster Extension Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immunization_Booster_Status__c</fullName>
        <description>Immunization Booster Status</description>
        <label>Immunization Booster Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extension Approved by Principal</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Missing 2nd MCV</fullName>
                </value>
                <value>
                    <fullName>Incomplete Exemption</fullName>
                </value>
                <value>
                    <fullName>Incomplete Missing MCV</fullName>
                </value>
                <value>
                    <fullName>Incomplete Missing Tdap</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid Form</fullName>
                </value>
                <value>
                    <fullName>Medical Exemption</fullName>
                </value>
                <value>
                    <fullName>Non-compliant Allow</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Required</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Verified</fullName>
                </value>
                <value>
                    <fullName>Pending- IA Review</fullName>
                </value>
                <value>
                    <fullName>Personal Exemption</fullName>
                </value>
                <value>
                    <fullName>Religious Exemption</fullName>
                </value>
                <value>
                    <fullName>Updated Exemption Required</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunization_Date_Of_Exemption__c</fullName>
        <description>Date of Exemption</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Date Of Exemption</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immunization_Exemption_Year__c</fullName>
        <description>Year of Immunization Exemption Form</description>
        <label>Immunization Exemption Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunization_Extension_Expire__c</fullName>
        <description>Date the Immunization Extension will expire</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Immunization Extension Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immunization_State_Lookup__c</fullName>
        <description>Immunization verified via lookup</description>
        <label>Immunization State Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunization_Status_Current__c</fullName>
        <label>Immunization Status Current</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>Extension Approved by Principal</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Allow</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Hold</fullName>
                </value>
                <value>
                    <fullName>Incomplete Exemption</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid Form</fullName>
                </value>
                <value>
                    <fullName>Medical Exemption</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Non-compliant Allow</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Required</fullName>
                </value>
                <value>
                    <fullName>ORCA Exempt - VEC Verified</fullName>
                </value>
                <value>
                    <fullName>Pending- IA Review</fullName>
                </value>
                <value>
                    <fullName>Personal Exemption</fullName>
                </value>
                <value>
                    <fullName>Provisional Certificate Required</fullName>
                </value>
                <value>
                    <fullName>Religious Exemption</fullName>
                </value>
                <value>
                    <fullName>Review - Allow</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verified-In Progress</fullName>
                </value>
                <value>
                    <fullName>MCK Liaison Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>